--- a/style.scss
+++ b/style.scss
@@ -1,28 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@font-face {
+	font-family: "inside-out";
+	src: url(fonts/Carton_Six.ttf);
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: arial;
+	font-family: "Roboto";
 	text-decoration: none;
 	list-style: none;
-	user-select: none;
+	// user-select: none;
 	// outline: 1px dotted;
 }
 
 body {
+	background: linear-gradient(#010010 20%, #000131);
+
 	header {
+		overflow: hidden;
+
+		div.gradient {
+			background: linear-gradient(#ffffff00 70%, #010010);
+			width: 100vw;
+			height: 100vh;
+		}
+
 		background: url(img/capa.jpg);
 		background-size: cover;
 		height: 100vh;
+		box-shadow: 0 30px 100px 100px #010010;
 
 		nav {
-			height: 80px;
+			height: 100px;
 			display: flex;
 			align-items: center;
 
 			ul {
 				display: flex;
 				list-style: none;
+				margin-left: 10px;
 
 				li {
 					margin: 0 30px;
@@ -30,6 +49,14 @@ body {
 					a {
 						text-decoration: none;
 						color: white;
+						font-family: "inside-out";
+						font-size: 1.3rem;
+						letter-spacing: 2px;
+						transition: 300ms;
+
+						&:hover {
+							color: #fbff01;
+						}
 					}
 				}
 			}
@@ -41,50 +68,397 @@ body {
 		}
 	}
 
+	p {
+		color: #ffffff;
+	}
+
 	main {
-
-		// height: 1000px;
 		section {
-			&#characters {
-				margin: 0 AUTO;
-				width: 80%;
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: center;
+			> h1 {
+				color: #fff;
+				font-family: "inside-out";
+				letter-spacing: 2px;
+				font-size: 2.3rem;
+				padding: 30px;
+				text-align: center;
+			}
 
-				figure {
+			&#introduction {
+				padding: 100px 150px;
+
+				p {
+					text-align: justify;
+					margin-bottom: 30px;
+					font-size: 1.25rem;
+				}
+
+				figure.synopsis {
+					margin-bottom: 50px;
 					display: flex;
-					overflow: hidden;
-					width: 350px;
-					height: 400px;
+					padding: 30px;
 
 					img {
-						height: 400px;
-						transition: 1500ms;
+						width: 250px;
 					}
 
 					figcaption {
-						color: #ffffff;
-						transition: 1500ms;
-
+						display: flex;align-items: center;
+						justify-content: center;
+						flex-direction: column;
 						h2 {
 							text-align: center;
-							margin: 20px 0;
+							color: white;
+							font-family: 'inside-out';
+							letter-spacing: 2px;
+							font-size: 1.6rem;
 						}
 
 						p {
 							text-align: justify;
-							width: 320px;
+							padding: 30px 50px;
+							margin-bottom: 20px;
+							font-size: 1.2rem;
+						}
+
+						a {
+							position: relative;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							width: 200px;
+							height: 60px;
+							text-decoration: none;
+							text-transform: uppercase;
+							overflow: hidden;
+							border-radius: 40px;
+							box-shadow: 0 0 5px #000000;
+							transition: 200ms;
+
+							span {
+								color: rgb(255, 255, 255);
+								font-size: 20px;
+								font-family: arial;
+								letter-spacing: 2px;
+								z-index: 1;
+								transition: 200ms;
+							}
+
+							div.liquid {
+								position: absolute;
+								top: -80px;
+								left: 0;
+								width: 200px;
+								height: 200px;
+								background: #4973ff;
+								box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+								transition: 500ms;
+
+								&::after,
+								&::before {
+									content: '';
+									width: 200%;
+									height: 200%;
+									position: absolute;
+									top: 0;
+									left: 50%;
+									transform: translate(-50%, -75%);
+									background: rgb(0, 0, 0);
+								}
+
+								&::before {
+									border-radius: 45%;
+									background: rgb(20, 20, 20, 1);
+									animation: animate 5s linear infinite;
+								}
+
+								&::after {
+									border-radius: 40%;
+									background: rgba(20, 20, 20, .5);
+									animation: animate 10s linear infinite;
+								}
+							}
+
+							&:hover {
+								box-shadow: 0 0 10px #3D60D5;
+							}
+
+							&:hover div.liquid {
+								top: -120px;
+							}
+
+							&:hover span {
+								letter-spacing: 3px;
+							}
+						}
+					}
+				}
+
+				figure.prota {
+					background: #fff;
+					border-radius: 10px;
+					padding: 50px 20px;
+					display: flex;
+					overflow: hidden;
+					height: 400px;
+
+					div.img {
+						img {
+							margin: 0 50px;
+						}
+
+						div#header-her-position {
+							width: 100px;
+							height: 100px;
+							position: absolute;
+							cursor: pointer;
+							// background: #000;
+							border-radius: 50px;
+							transform: translateX(160px) translateY(-270px);
 						}
 					}
 
-					&:hover img {
-						transform: translateX(-720px);
+					div#header-her-animation {
+						height: 500px;
+						transition: 500ms;
+
+						figcaption {
+							h2 {
+								text-align: center;
+								font-family: "inside-out";
+								letter-spacing: 2px;
+								font-size: 2rem;
+								color: #000131;
+							}
+
+							p {
+								color: #000000;
+								font-size: 1.2rem;
+								padding: 10px;
+								width: 600px;
+								text-align: justify;
+							}
+						}
+
+						blockquote {
+							position: relative;
+							top: 200px;
+
+							cite {
+								font-family: "inside-out";
+								font-size: 2.5rem;
+								color: #000131;
+								text-align: center;
+								cursor: pointer;
+
+								&::after {
+									content: '';
+									height: 45px;
+									margin-left: 10px;
+									width: 3px;
+									background: #000131;
+									position: absolute;
+									animation: piscar 1000ms ease-in-out infinite;
+								}
+							}
+						}
+					}
+				}
+			}
+
+			&#characters {
+				padding-top: 0px;
+
+				figure {
+					width: 80%;
+					overflow: hidden;
+					margin: 0px auto 20px;
+					height: 400px;
+					display: flex;
+					border-radius: 10px;
+
+					img {
+						height: 400px;
+					}
+
+					blockquote {
+						color: #ffffff;
+						transform: translateX(-200px) translateY(100px);
+						transition: 1000ms;
+						opacity: 1;
+
+						q {
+							width: 500px;
+							display: block;
+							font-size: 2rem;
+							font-family: "inside-out";
+						}
+					}
+
+					figcaption {
+						color: #ffffff;
+						transform: translateX(400px) translateY(20px);
+						transition: 1000ms;
+						opacity: 0;
+
+						h2 {
+							text-align: center;
+							margin: 20px;
+							letter-spacing: 2px;
+							font-size: 1.9rem;
+							font-family: "inside-out";
+						}
+
+						p {
+							text-align: justify;
+							width: 530px;
+						}
+					}
+
+					&:hover blockquote {
+						transform: translateX(-200px) translateY(-300px);
+						opacity: 0;
 					}
 
 					&:hover figcaption {
-						transform: translateX(-700px);
+						opacity: 1;
+						transform: translateX(-700px) translateY(20px);
 					}
+				}
+			}
+
+			&#resume {
+				padding: 50px;
+
+				* {
+					// outline: 1px dotted;
+				}
+
+				div.line-resume {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+
+					aside {
+						display: flex;
+						flex-direction: column;
+
+						div {
+							display: flex;
+							align-items: center;
+
+							// border: 3px solid;
+							p {
+								color: rgb(92, 92, 92);
+								width: 500px;
+								text-align: justify;
+								padding: 20px;
+								border: 2px solid #000131;
+								border-radius: 20px;
+								background: #fff;
+								box-shadow: 0 0 10px 0px #ccc;
+							}
+						}
+
+						&.left {
+							height: 700px;
+							justify-content: space-around;
+
+							div {
+								height: calc(700px/3);
+							}
+						}
+
+						&.right {
+							height: 900px;
+							justify-content: space-between;
+
+							div {
+								height: calc(900px/4);
+							}
+						}
+					}
+
+					> div.line {
+						margin: 0 20px;
+						height: 700px;
+						width: 2px;
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						background: rgb(255, 255, 255);
+						align-items: center;
+
+						> div.point {
+							width: 15px;
+							height: 15px;
+							background: #ffffff;
+							border: 2px solid #000131;
+							border-radius: 30px;
+						}
+					}
+				}
+			}
+
+			&#review {
+				* {
+					// outline: 1px dotted;
+					color: rgb(53, 53, 53);
+				}
+
+				background: #ffffff;
+				box-shadow: inset 0 0 20px #000131;
+				padding: 50px 150px;
+
+				> h1 {
+					color: #000131;
+				}
+
+				> p {
+					margin-bottom: 10px;
+					font-size: 1.2rem;
+				}
+
+				p {
+					text-align: justify;
+				}
+
+				div {
+					padding-top: 20px;
+
+					> h2 {
+						text-decoration: underline;
+						margin-bottom: 10px;
+						color: #484848;
+						font-size: 1.7rem;
+					}
+
+					> p {
+						font-size: 1.2rem;
+					}
+
+					ul {
+						li {
+							list-style: disc;
+							margin: 20px;
+
+							h3 {
+								font-size: 1.3rem;
+								font-style: italic;
+								margin-bottom: 10px;
+							}
+
+							p {
+								font-size: 1.1rem;
+							}
+						}
+					}
+				}
+			}
+			&#end{
+				padding: 50px 150px;
+				p{
+					margin-bottom: 25px;
+					font-size: 1.2rem;
 				}
 			}
 		}
@@ -214,5 +588,25 @@ body {
 	&::-webkit-scrollbar-thumb {
 		background: #000000;
 		border-radius: 20px;
+	}
+}
+
+@keyframes piscar {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes animate {
+	from {
+		transform: translate(-50%, -75%) rotate(0deg);
+	}
+
+	to {
+		transform: translate(-50%, -75%) rotate(360deg);
 	}
 }
